# TOS-Desktop-Environment

./: .gitignore  ALPHA2_TO_BETA0_CHECKLIST.md  ALPHA2_TO_BETA0_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Complete plan.md  Development Discoveries.md  Development plan.md  Dream complete.md  Dream.md  Dream.txt  Fixes for Architectural Spec v1.0.md  Makefile  README.md  TOS AI Development Standards.md  TOS Architectural Specification addendum A.md  TOS Architectural Specification v1.0.md  TOS Architectural Specification v1.2 - Extensions.md  TOS Architectural Specification v1.3 - Extensions.md  TOS UX Design Specification.md  TOS_Beta-0_Roadmap.md  TOS_SSH_Wayland_Fix_Plan.md  TOS_User_Stories.md  TOS_alpha2-to-beta0.md  TOS_cortex_spec.patch  TOS_v0.1_Roadmap.md  UNIFIED_PLAN_v4.5.md  Unified Plan.md  ai-patch.md  architecture_analysis.md  bezel_completion_plan.md  dev plan.md  dream complete v1.md  dream complete v2.md  dream complete v3.md  install plan.md  install.sh  install_deps.sh  makefile  (+6 more)
alpha-2/: .gitignore  ALPHA2_TO_BETA0_CHECKLIST.md  Cargo.toml  Makefile  install_deps.sh  package-lock.json  print_ws.js  tos.toml
alpha-2/dev_docs/: TOS_Alpha-2.1_User-Manual.md  TOS_alpha-2.0_Roadmap.md  TOS_alpha-2.1_Brain-Roadmap.md  TOS_alpha-2.1_Dependencies-Tree.md  TOS_alpha-2.1_Ecosystem-Roadmap.md  TOS_alpha-2.1_Face-Roadmap.md  TOS_alpha-2.1_Roadmap.md  TOS_alpha-2.2.1_E2E-Testing-Roadmap.md  TOS_alpha-2.2.1_Electron-Platform-Guide.md  TOS_alpha-2.2.1_Platform-Options-Implementation-Plan.md  TOS_alpha-2.2.1_Platform-Options.md  TOS_alpha-2.2_AI-Copilot-Specification.md  TOS_alpha-2.2_Expanded-Bezel-Specification.md  TOS_alpha-2.2_Implementation-Plan.md  TOS_alpha-2.2_Marketplace-Discovery-Specification.md  TOS_alpha-2.2_Onboarding-Specification.md  TOS_alpha-2.2_Production-Roadmap.md  TOS_alpha-2.2_Session-Persistence-Specification.md  TOS_alpha-2.2_Split-Viewport-Specification.md  TOS_alpha-2.2_Trust-Confirmation-Specification.md  TOS_alpha-2_Architecture-Specification.md  TOS_alpha-2_Developer-SDK.md  TOS_alpha-2_Development-Guide.md  TOS_alpha-2_Display-Face-Specification.md  TOS_alpha-2_Ecosystem-Orchestration.md  TOS_alpha-2_Ecosystem-Specification.md  TOS_alpha-2_Implementation-Plan.md  TOS_alpha-2_Project-Structure.md  TOS_alpha-2_TDD-Plan.md  TOS_alpha-3_Roadmap.md  tos-alpa-2.1-gaps.md  tos-alpa-2.1-questions.md
alpha-2/electric-face/: README.md
alpha-2/src/: lib.rs  main.rs
alpha-2/svelte_ui/: dom-e2e-dump.html  package-lock.json  package.json
alpha-2/tests/: ai_integration.rs  application_integration.rs  face_visual_states.rs  headless_brain.rs  security_manifest.rs  service_extraction.rs  settings_schema.rs  stimulator.rs  stimulator_brain_node.rs  tier3_ai.rs  tier4_security.rs  tier4_security_manifest.rs  tier5_orchestration.rs  ui_component.spec.js
alpha-2/tos-android/: Cargo.toml
alpha-2/web_ui/: app.js  index.html  style.css
brain/: Cargo.toml
brain/src/: config.rs  lib.rs  main.rs
brain/tests/: Cargo.toml  ai_integration.rs  ai_staging_flow.rs  brain_core.rs  collaboration.rs  communication.rs  messaging.rs  navigation.rs  sandbox.rs  service_orchestration.rs  shell_integration.rs  test_main.rs  user.rs  user_app.rs  user_hub.rs  user_terminal.rs
face-android-flutter/rust/: Cargo.toml
face-wayland-linux/: Cargo.toml
face-wayland-linux/src/: lib.rs  main.rs  wayland.rs
face-wayland-linux/tests/: wayland_integration.rs
old/traditional/: Cargo.toml  Native Desktop Architecture.md  TEST_COVERAGE_REPORT.md  demo-dev-monitor.sh
scripts/tos-signer/: Cargo.toml
tests/: Cargo.toml  agent_stacking.rs  ai_staging_flow.rs  collaboration_sync.rs  cortex_transports.rs  curator_mcp.rs  dynamic_registration.rs  face_visual_states.rs  mock_gitnexus.py  osc_stress.rs  privacy_incognito.rs  sandbox_isolation.rs  session_persistence.rs  ui_component.spec.js
tos-android/: Cargo.toml
tos-android/src/: lib.rs  services.rs
tos-common/: Cargo.toml  README.md
tos-common/src/: collaboration.rs  config.rs  controller_mapping.rs  daemon.rs  ipc.rs  keybindings.rs  lib.rs  marketplace.rs  modules.rs  platform.rs  services.rs  shell.rs  state.rs
tos-common/tests/: accessibility_test.rs  audio_module_test.rs  bezel_module_test.rs  brain_core.rs  collaboration_enforcement.rs  collaboration_logic.rs  controller_mapping_test.rs  crash_reporting_test.rs  editor_integration.rs  language_module_test.rs  opensearch_test.rs  privacy_control_test.rs  protocol_tests.rs  quest_renderer_test.rs  sandbox_test.rs  serde_stability.rs  shell_logic.rs  spatial_audio_test.rs  timeline_test.rs
tos-dream/: Cargo.toml  MODULE_SYSTEM.md  test_json.rs  test_output.txt  test_render.rs
tos-dream/.cargo/: config.toml
tos-dream/.tos_config_dev/: session.json
tos-dream/src/: bezel.rs  cli.rs  lib.rs  main.rs
tos-dream/tests/: accessibility.rs  activity_mode.rs  advanced_features_integration.rs  app_model.rs  app_surface_and_activity_mode.rs  audio_remote_integration.rs  bezel_state_test.rs  collaboration.rs  collaboration_ui.rs  container_saas_integration.rs  core_functionality.rs  deep_inspection.rs  global_view.rs  hierarchy.rs  hub_interactions.rs  input_abstraction.rs  input_mapping.rs  inspector_view.rs  integration_dispatch.rs  live_feed.rs  logging.rs  marketplace.rs  marketplace_integration.rs  minimap.rs  module_integration.rs  remote.rs  security.rs  settings_ui.rs  shell_api.rs  shell_api_wiring.rs  shell_module.rs  svg_engine.rs  ui_visual_log.rs  unified_search_and_ai.rs  voice_commands.rs
tos-dream/ui/: index.html
tos-heuristicd/: Cargo.toml  README.md
tos-heuristicd/src/: main.rs
tos-heuristicd/tests/: integration.rs
tos-searchd/: Cargo.toml  README.md
tos-searchd/src/: lib.rs  main.rs
tos-searchd/tests/: search_integration.rs
tos-sessiond/: Cargo.toml  README.md
tos-sessiond/src/: main.rs
tos-sessiond/tests/: integration.rs
traditional/: Cargo.toml  DEV_MONITOR_QUICKSTART.txt  README.md  TEST_IMPROVEMENTS_SUMMARY.md
traditional/src/: dev_monitor.rs  lib.rs  main.rs
traditional/tests/: compositor_mapping.rs  (+8 more)
(+801 files in other folders)
