[workspace]
members = ["brain", "tos-common", "brain/tests"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.0"
edition = "2021"

[workspace.dependencies]
tos-lib = { path = "brain" }
tos-common = { path = "tos-common" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
strip = true
