[package]
name = "alpha_2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.22"
portable-pty = "0.8"
sysinfo = "0.30"
dirs = "6.0.0"
toml = "1.0.3"

[lib]
name = "tos_alpha2"
path = "src/lib.rs"

[[bin]]
name = "tos-brain"
path = "src/main.rs"
