[workspace]
members = [".", "tos-protocol", "tos-android"]
resolver = "2"

[package]
name = "alpha_2"
version = "0.1.0"
edition = "2021"

[dependencies]
tos-protocol = { path = "tos-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.22"
portable-pty = "0.8"
sysinfo = "0.30"
dirs = "6.0.0"
toml = "1.0.3"
libc = "0.2.182"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.10.0"
hex = "0.4.3"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
rodio = "0.18.1"
walkdir = "2.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
fastembed = "5.12.0"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
smithay-client-toolkit = { version = "0.18", features = ["calloop"] }
ab_glyph = "0.2"
tiny-skia = "0.11"

[lib]
name = "tos_lib"
path = "src/lib.rs"

[[bin]]
name = "tos-brain"
path = "src/main.rs"

[[bin]]
name = "tos-settingsd"
path = "src/bin/settingsd.rs"

[[bin]]
name = "tos-loggerd"
path = "src/bin/loggerd.rs"

[[bin]]
name = "tos-marketplaced"
path = "src/bin/marketplaced.rs"

[[bin]]
name = "tos-priorityd"
path = "src/bin/priorityd.rs"

[[bin]]
name = "tos-sessiond"
path = "src/bin/sessiond.rs"

[[bin]]
name = "tos-heuristicd"
path = "src/bin/heuristicd.rs"
