[package]
name = "tos-brain"
version = "0.1.0-beta.0"
edition = "2021"

[dependencies]
tos-common = { path = "../tos-common" }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "tos-brain"
path = "src/main.rs"

[[bin]]
name = "system_test"
path = "src/bin/system_test.rs"

[[bin]]
name = "brain_node"
path = "src/bin/brain_node.rs"

[[bin]]
name = "tos"
path = "src/bin/tos.rs"

[[bin]]
name = "tos-pkg"
path = "src/bin/tos-pkg.rs"

[dev-dependencies]
tempfile = "3.27.0"
