[package]
name = "face-wayland-linux"
version = "0.1.0-beta.0"
edition = "2021"
description = "TOS Linux Face - native Wayland platform layer for TOS Desktop Environment"

[dependencies]
tos-common = { path = "../tos-common" }

# Wayland / Graphics
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
smithay-client-toolkit = { version = "0.18", features = ["calloop"] }
tiny-skia = "0.11"
ab_glyph = "0.2"
memmap2 = "0.9"

# Shared dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
calloop = "0.12"
raw-window-handle = "0.6"
libc = "0.2"
base64 = "0.22"
tokio = { version = "1.41", features = ["full"] }
