[package]
name = "tos-e2e-tests"
version = "0.1.0-beta.0"
edition = "2021"
publish = false

[dependencies]
tos-common = { path = "../tos-common" }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.7", features = ["v4"] }
base64 = "0.22"
tempfile = "3.10"

[[test]]
name = "service_orchestration"
path = "service_orchestration.rs"

[[test]]
name = "face_visual_states"
path = "face_visual_states.rs"

[[test]]
name = "ai_staging_flow"
path = "ai_staging_flow.rs"

[[test]]
name = "collaboration_sync"
path = "collaboration_sync.rs"

[[test]]
name = "dynamic_registration"
path = "dynamic_registration.rs"

[[test]]
name = "osc_stress"
path = "osc_stress.rs"

[[test]]
name = "session_persistence"
path = "session_persistence.rs"

[[test]]
name = "cortex_transports"
path = "cortex_transports.rs"
