[package]
name = "tos-common"
version = "0.1.0-beta.0"
edition = "2021"
description = "Universal foundation for TOS - shared types, platform traits, and common logic"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
