[package]
name = "tos-common"
version = "0.1.0-beta.0"
edition = "2021"
description = "Universal foundation for TOS - shared types, platform traits, and common logic"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "1.0.3"
dirs = "6.0.0"
tracing = "0.1"
anyhow = "1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1.36", features = ["full"] }
