[package]
name = "tos-common"
version = "0.1.0-beta.0"
edition = "2021"
description = "Universal foundation for TOS - shared types, platform traits, and common logic"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Shared search/AI traits or light types can be added here later if needed.
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.22"
sysinfo = "0.30"
dirs = "6.0.0"
toml = "1.0.3"
libc = "0.2.182"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
hex = "0.4.3"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
rodio = "0.18.1"
walkdir = "2.5.0"
reqwest = { version = "0.12", features = ["json", "charset", "http2"] }
hf-hub = { version = "0.4.3", features = ["tokio"] }
mdns-sd = "0.18.2"
lsp-types = "0.97.0"
url = "2.5"
crossbeam-channel = "0.5.15"

[target.'cfg(not(target_os = "android"))'.dependencies]
portable-pty = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
test-utils = []

[dev-dependencies]
tempfile = "3.10"
