[package]
name = "tos-dream"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
libc = "0.2"
dirs = "5.0"
gilrs = { version = "0.10", optional = true }

# Phase 8: Module System dependencies
notify = "6.1"
toml = "0.8"
tempfile = "3.10"

# Phase 9: Marketplace and Templates dependencies
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
minisign-verify = "0.2"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.3"

# GUI dependencies (optional for headless testing)
wry = { version = "0.40", optional = true }
tao = { version = "0.27", optional = true }

# Phase 10: Accessibility and Live Feed dependencies
# Audio/earcons - using rodio for cross-platform audio
rodio = { version = "0.17", optional = true }

# Phase 11: Security and Shell API dependencies
regex = "1.10"
base64 = "0.22"
rand = "0.8"
# WebSocket for live feed streaming
tokio-tungstenite = { version = "0.21", optional = true }
# TTS - using speech-dispatcher for Linux
speech-dispatcher = { version = "0.16", optional = true }
# AT-SPI for screen reader integration
atspi = { version = "0.19", optional = true }
# High contrast theme support
dark-light = { version = "1.0", optional = true }

[features]
default = ["gui"]
gui = ["dep:wry", "dep:tao"]
gamepad = ["dep:gilrs"]
accessibility = ["dep:rodio", "dep:speech-dispatcher", "dep:atspi", "dep:dark-light"]
live-feed = ["dep:tokio-tungstenite"]
full = ["gui", "gamepad", "accessibility", "live-feed"]

[lib]
name = "tos_core"
path = "src/lib.rs"

[[bin]]
name = "tos"
path = "src/main.rs"
required-features = ["gui"]
