[package]
name = "tos_dream"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
libc = "0.2"
dirs = "5.0"
gilrs = { version = "0.10", optional = true }

# Module System dependencies
notify = "6.1"
toml = "0.8"
tempfile = "3.10"

# Marketplace and Templates dependencies
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
minisign-verify = "0.2"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.3"

# GUI dependencies (optional for headless testing)
wry = { version = "0.40", optional = true }
tao = { version = "0.27", optional = true }

# Accessibility and Live Feed dependencies
# Audio/earcons - using rodio for cross-platform audio
rodio = { version = "0.17", optional = true }

# Voice System dependencies
# Audio capture for voice commands
cpal = { version = "0.15", optional = true }
# Speech-to-text using whisper
whisper-rs = { version = "0.8", optional = true }

# Script Engine dependencies
# JavaScript execution via quickjs
rquickjs = { version = "0.5", optional = true }
# Lua execution via mlua
mlua = { version = "0.9", features = ["lua54", "async"], optional = true }

# Remote Desktop dependencies
# SSH for remote connections (using russh for async SSH)
russh = { version = "0.43", optional = true }
russh-keys = { version = "0.43", optional = true }
# WebSocket for real-time communication
tokio-tungstenite = { version = "0.21", optional = true }

# Security and Shell API dependencies
regex = "1.10"
base64 = "0.22"
rand = "0.8"
# TTS - using speech-dispatcher for Linux
speech-dispatcher = { version = "0.16", optional = true }
# AT-SPI for screen reader integration
atspi = { version = "0.19", optional = true }
# High contrast theme support
dark-light = { version = "1.0", optional = true }

# Container Strategy & SaaS Architecture
bollard = { version = "0.15", optional = true }
kube = { version = "0.87", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.20", features = ["v1_28"], optional = true }
aws-config = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
aws-sdk-ecs = { version = "1.0", optional = true }
vaultrs = { version = "0.7", optional = true }
schemars = { version = "0.8", features = ["derive"], optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true }
opentelemetry-stdout = { version = "0.2", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }

# Wayland Support
smithay = { version = "0.7.0", optional = true, default-features = false, features = ["wayland-backend", "backend_winit", "desktop", "wayland_frontend", "renderer_gl"] }
wayland-server = { version = "0.31", optional = true }

# OpenXR Support
openxr = { version = "0.19", optional = true }

[features]
default = ["full"]
gui = ["dep:wry", "dep:tao"]
gamepad = ["dep:gilrs"]
accessibility = ["dep:rodio", "dep:speech-dispatcher", "dep:atspi", "dep:dark-light", "voice-system"]
live-feed = ["dep:tokio-tungstenite"]
voice-system = ["dep:cpal", "dep:whisper-rs"]
script-engine = ["dep:rquickjs", "dep:mlua"]
remote-desktop = ["dep:russh", "dep:russh-keys", "dep:tokio-tungstenite"]
wayland = ["dep:smithay", "dep:wayland-server"]
openxr = ["dep:openxr"]
saas = [
    "dep:bollard", 
    "dep:kube", 
    "dep:k8s-openapi", 
    "dep:aws-config", 
    "dep:aws-sdk-s3", 
    "dep:aws-sdk-ecs", 
    "dep:vaultrs", 
    "dep:schemars",
    "dep:opentelemetry", 
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-stdout",
    "dep:tracing-opentelemetry"
]
full = ["gui", "gamepad", "accessibility", "live-feed", "saas", "wayland", "openxr"]

[lib]
name = "tos_core"
path = "src/lib.rs"

[[bin]]
name = "tos"
path = "src/main.rs"
required-features = ["gui"]
