[package]
name = "tos-heuristicd"
version = "0.1.0-beta.0"
edition = "2021"

[dependencies]
tos-common = { path = "../tos-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
