[package]
name = "tos-searchd"
version = "0.1.0-beta.0"
edition = "2021"

[dependencies]
tos-common = { path = "../tos-common" }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = { version = "5.13" }
walkdir = "2.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
