[package]
name = "tos_comp"
version = "0.1.0"
edition = "2021"

[features]
default = []
gui = ["wry", "winit"]
compositor = ["smithay", "input"]

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# === Optional: Hardware-dependent crates ===

# Core Wayland Compositor (requires libudev, libinput)
smithay = { version = "0.3", default-features = false, features = ["backend_winit", "backend_drm", "renderer_gl", "wayland_frontend"], optional = true }

# Windowing (requires X11/Wayland libs)
winit = { version = "0.29", default-features = false, features = ["x11", "wayland"], optional = true }

# Input (requires libinput)
input = { version = "0.8", optional = true }

# UI WebView (requires libwebkit2gtk-4.1-dev)
wry = { version = "0.35", optional = true }
