[package]
name = "face-android-flutter-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0", features = ["chrono"] }
tos-common = { path = "../../tos-common" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
