[package]
name = "tos_comp"
version = "0.1.0"
edition = "2021"

[features]
default = []
gui = ["wry", "winit"]
compositor = ["smithay", "input"]
gpu = ["wgpu"]
dev-monitor = ["tokio", "warp", "serde_json", "once_cell", "futures-util"]

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Unix PTY support (always available on Linux)
libc = "0.2"

# === Optional: Hardware-dependent crates ===

# Core Wayland Compositor (requires libudev, libinput)
smithay = { version = "0.3", default-features = false, features = ["backend_winit", "backend_drm", "renderer_gl", "wayland_frontend"], optional = true }

# GPU Rendering Pipeline
wgpu = { version = "0.20", optional = true }

# Windowing (requires X11/Wayland libs)
winit = { version = "0.29", default-features = false, features = ["x11", "wayland"], optional = true }

# Input (requires libinput)
input = { version = "0.8", optional = true }

# UI WebView (requires libwebkit2gtk-4.1-dev)
wry = { version = "0.35", optional = true }

# Dev Monitor (HTTP + WebSocket server for UI debugging)
tokio = { version = "1", features = ["full"], optional = true }
warp = { version = "0.3", optional = true }
serde_json = { version = "1.0", optional = true }
once_cell = { version = "1.19", optional = true }
futures-util = { version = "0.3", optional = true }
