[package]
name = "tos-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
cryptoki = "0.7"
sha2 = "0.10"
hex = "0.4"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
rsa = { version = "0.9", features = ["sha2"] }

[dev-dependencies]
rand = "0.8"
